5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1613_2425.log
== TEST (2019-04-01 17:12:40) 
-- CODE:
d=500
gas=35
print(round(d/gas,3 "km/h"))
-- ERROR:
File "XXXX", line 3
    print(round(d/gas,3 "km/h"))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:14:21) 
-- CODE:
d=float(input("distancia: "))
gas=float(input("combustivel gasto: "))
print(round(d/gas,3 "km/h"))
-- ERROR:
File "XXXX", line 3
    print(round(d/gas,3 "km/h"))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:14:59) 
-- CODE:
d=float(input("distancia: "))
gas=float(input("combustivel gasto: "))
print(round(d/gas,3)"km/l")
-- ERROR:
File "XXXX", line 3
    print(round(d/gas,3)"km/l")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:15:13) 
-- CODE:
d=float(input("distancia: "))
gas=float(input("combustivel gasto: "))
print(round(d/gas,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:16:11) 
-- CODE:
d=float(input("distancia: "))
gas=float(input("combustivel gasto: "))
print(d)
-- OUTPUT:
28.572
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:17:43) 
-- CODE:
d=float(input("distancia: "))
gas=float(input("combustivel gasto: "))
print(round(d/gas,3)
-- ERROR:
File "XXXX", line 4
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:17:51) 
-- CODE:
d=float(input("distancia: "))
gas=float(input("combustivel gasto: "))
print(round(d/gas,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:18:23) 
-- CODE:
d=float(input("distancia: "))
gas=float(input("combustivel gasto: "))
print(round(d/gas,3)"km/l")
-- ERROR:
File "XXXX", line 3
    print(round(d/gas,3)"km/l")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:20:14) 
-- CODE:
d=float(input("distancia: "))
gas=float(input("combustivel gasto: "))
consumo=round(d/gas,3)
print(consumo "km/l")

-- ERROR:
File "XXXX", line 4
    print(consumo "km/l")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:20:30) 
-- CODE:
d=float(input("distancia: "))
gas=float(input("combustivel gasto: "))
consumo=round(d/gas,3)
print(consumo"km/l")

-- ERROR:
File "XXXX", line 4
    print(consumo"km/l")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:21:32) 
-- CODE:
d=float(input("distancia: "))
gas=float(input("combustivel gasto: "))
consumo=d/gas
consumo=round(consumo,3)
print(consumo"km/l")

-- ERROR:
File "XXXX", line 5
    print(consumo"km/l")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:21:40) 
-- CODE:
d=float(input("distancia: "))
gas=float(input("combustivel gasto: "))
consumo=d/gas
consumo=round(consumo,3)
print(consumo,"km/l")

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:22:37) 
-- CODE:
d=float(input("distancia: "))
gas=float(input("combustivel gasto: "))d/gas
consumo=round(d/gas,3)
print(consumo,"km/l")

-- ERROR:
File "XXXX", line 2
    gas=float(input())d/gas
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:22:46) 
-- CODE:
d=float(input("distancia: "))
gas=float(input("combustivel gasto: "))
consumo=round(d/gas,3)
print(consumo,"km/l")

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 17:23:04) 
-- CODE:
d=float(input("distancia: "))
gas=float(input("combustivel gasto: "))
consumo=round(d/gas,3)
print(consumo,"km/l")

-- EXECUTION TIME:
0.213514
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
